# grostat

./: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  RELEASING.md  growatt_monitor.py  justfile  pyproject.toml
GrostatBar/: Package.swift  bundle.sh
GrostatBar/GrostatBar.app/Contents/: Info.plist
GrostatBar/Sources/: AppDelegate.swift  BarConfig.swift  GrostatServer.swift  InverterState.swift  PeriodSelector.swift  PeriodState.swift  PopoverContentView.swift  RemoteReader.swift  ServerBrowser.swift  ServerPickerView.swift  StatsChartView.swift  StatsData.swift  StatsView.swift  StatusPopover.swift  StatusReader.swift  SummaryCardsView.swift
Sources/GrostatShared/: InverterReading.swift  PeriodSummary.swift  ReadingProvider.swift
Sources/grostat/: API.swift  Alerts.swift  Config.swift  Database.swift  Errors.swift  Format.swift  Grostat.swift  Log.swift  Models.swift
Sources/grostat/Commands/: CollectCommand.swift  ConfigCommand.swift  DbInfoCommand.swift  DeviceCommand.swift  ExportCommand.swift  InitCommand.swift  QueryHistoricalDataCommand.swift  ScheduleCommand.swift  StatusCommand.swift  SummaryCommand.swift  TokenCommand.swift
homebrew/: grostat.rb
openspec/changes/client-mode/: design.md  proposal.md  tasks.md
openspec/changes/fix-delta-partial-period/: proposal.md
openspec/changes/grostat-menubar/: proposal.md
openspec/changes/grostat-statistics/: design.md  proposal.md  tasks.md
src/grostat/: __init__.py  alerts.py  api.py  cli.py  config.py  db.py  models.py
(+30 files in other folders)
