[project]
name = "grostat"
version = "0.3.0"
description = "Growatt inverter data collector — full telemetry to SQLite"
readme = {text = "Growatt inverter data collector", content-type = "text/plain"}
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "requests>=2.31",
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "rich>=13.9",
]

[dependency-groups]
dev = ["ruff>=0.11", "ty>=0.0.1a7"]

[project.scripts]
grostat = "grostat.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grostat"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
extra-paths = ["src"]
